---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE VIEW universal_comedies AS SELECT * FROM comedies WHERE classification = 'U' WITH LOCAL CHECK OPTION;"
---
ViewStmt@0..108
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  View@7..11 "VIEW"
  Whitespace@11..12 " "
  RangeVar@12..30
    Ident@12..30 "universal_comedies"
  Whitespace@30..31 " "
  As@31..33 "AS"
  Whitespace@33..34 " "
  SelectStmt@34..83
    Select@34..40 "SELECT"
    Whitespace@40..41 " "
    ResTarget@41..42
      ColumnRef@41..42
        AStar@41..42
          Ascii42@41..42 "*"
    Whitespace@42..43 " "
    From@43..47 "FROM"
    Whitespace@47..48 " "
    RangeVar@48..56
      Ident@48..56 "comedies"
    Whitespace@56..57 " "
    Where@57..62 "WHERE"
    Whitespace@62..63 " "
    AExpr@63..83
      ColumnRef@63..77
        Ident@63..77 "classification"
      Whitespace@77..78 " "
      Ascii61@78..79 "="
      Whitespace@79..80 " "
      AConst@80..83
        Sconst@80..83 "'U'"
  Whitespace@83..84 " "
  With@84..88 "WITH"
  Whitespace@88..89 " "
  Local@89..94 "LOCAL"
  Whitespace@94..95 " "
  Check@95..100 "CHECK"
  Whitespace@100..101 " "
  Option@101..107 "OPTION"
  Ascii59@107..108 ";"

